--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,7 @@
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    /[if lt IE 9]
+      = javascript_include_tag '//html5shiv.googlecode.com/svn/trunk/html5.js'
   %body
     = yield
