--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,15 @@
     /[if lt IE 9]
       = javascript_include_tag '//html5shiv.googlecode.com/svn/trunk/html5.js'
   %body
-    = yield
+    %header
+      .topbar
+        .logo 
+          = link_to "Kaomoji  ˖✧└('ω')」✧˖°", root_path
+        .nav
+          %ul
+            %li= link_to "Home", root_path
+            %li= link_to "Sign up", signup_path 
+            %li= link_to "Sign in", '#'
+
+    #content
+      = yield
