Just added user#show

--- a/app/assets/stylesheets/sass/home.css.sass
+++ b/app/assets/stylesheets/sass/home.css.sass
@@ -28,5 +28,12 @@ body
     a.button
       margin: 20px auto
       @include sassy-button("shiny", 10px, 19px, #4ba3cc)
+    .debug_dump 
+      clear: both
+      width: 100%
+      margin-top: 45px
+      padding: 20px
+      background-color: rgba(0,0,0,0.1)
+      @include border-radius(4px, 4px)
 
     
