--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,9 +16,14 @@
         .nav
           %ul
             %li= link_to "Home", root_path
-            %li= link_to "Sign up", signup_path 
-            %li= link_to "Sign in", '#'
-
+            %li= link_to "Sign up", signup_path
+            - if signed_in?
+              %li= link_to "Profile", current_user
+              %li= link_to "Sign out", signout_path, method: "delete"
+            - else
+              %li= link_to "Sign in", signin_path
     #content
+      - flash.each do |key, value|
+        %div{:class => "alert-#{key}"}= value
       = yield
       = debug(params) if Rails.env.development?
