--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     %header
       .topbar
         .logo 
-          = link_to "Kaomoji  ˖✧└('ω')」✧˖°", root_path
+          = link_to "Kaomoji", root_path
         .nav
           %ul
             %li= link_to "Home", root_path
